syntax = "proto3";
package ink.pmc.transfer.proto;

import "Category.proto";

message CategoryBundle {
  repeated ProtoCategory categories = 1;
}