syntax = "proto3";
package ink.pmc.transfer.proto;

import "DestinationStatus.proto";

message ProtoDestination {
  string id = 1;
  string icon = 2;
  string name = 3;
  string description = 4;
  ProtoDestinationStatus status = 5;
  int32 playerCount = 6;
  int32 maxPlayerCount = 7;
  bool isHidden = 8;
  repeated string categories = 9;
}